--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+dnspython==1.16.0
+eventlet==0.25.1
 Flask==1.1.1
 Flask-SocketIO==4.2.1
+greenlet==0.4.15
+gunicorn==20.0.4
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+monotonic==1.5
 numpy==1.18.0
 python-engineio==3.11.1
 python-socketio==4.4.0
