--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dnspython==1.16.0
 eventlet==0.25.1
 Flask==1.1.1
 Flask-SocketIO==4.2.1
+future==0.18.2
 greenlet==0.4.15
 gunicorn==20.0.4
 idna==2.8
@@ -12,10 +13,14 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 monotonic==1.5
-numpy==1.18.0
+numpy==1.18.2
 python-engineio==3.11.1
 python-socketio==4.4.0
+remote-object==0.2.1
 requests==2.22.0
+seabreeze==1.0.1
+seabreeze-server==0.1.1
+seatease==0.3
 six==1.13.0
 socketIO-client==0.7.2
 urllib3==1.25.7
