--- a/tcpserver/Dockerfile
+++ b/tcpserver/Dockerfile
@@ -12,11 +12,17 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+# Configure environment
+RUN apt-get update && apt-get install udev -y
+
 # Install requirements (do this before copying source files
 #  for faster re-compiles)
 RUN pip install --upgrade pip
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
+
+# Copy over udev rules
+COPY ./config/10-oceanoptics.rules /etc/udev/rules.d/10-oceanoptics.rules
 
 # Copy source into container
 COPY . /usr/src/app/
